--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ina",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Check name availability on npm",
   "author": "Krisztian Nagy <chrisakakay@gmail.com> (http://chrisakakay.github.io/)",
   "homepage": "https://github.com/chrisakakay/ina",
+  "repository": "chrisakakay/ina",
   "bugs": {
     "url": "https://github.com/chrisakakay/ina/issues",
     "email": "chrisakakay@gmail.com"
@@ -25,5 +26,8 @@
   "devDependencies": {
     "eslint": "^3.14.1",
     "jest": "^18.1.0"
+  },
+  "dependencies": {
+    "request": "^2.79.0"
   }
 }
