fixed package size

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ina",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "Check name availability on npm",
   "author": "Krisztian Nagy <chrisakakay@gmail.com> (http://chrisakakay.github.io/)",
   "homepage": "https://github.com/chrisakakay/ina",
@@ -10,6 +10,9 @@
     "email": "chrisakakay@gmail.com"
   },
   "main": "index.js",
+  "files": [
+    "index.js"
+  ],
   "scripts": {
     "lint": "eslint index.js",
     "test": "jest",
